php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #21689 fgetcsv suppresses some characters before a separator
Submitted: 2003-01-16 10:41 UTC Modified: 2003-02-28 07:29 UTC
From: alpes at softhome dot net Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 4.2.3 OS: OS/2
Private report: No CVE-ID: None
 [2003-01-16 10:41 UTC] alpes at softhome dot net
fgetcsv suppresses some characters before a separator
[OS/2 kheldar 1 2.45 i386, PHP Version 4.2.3, Apache/1.3.22]
For example if the csv file has following content:

???|???|????|??|?|??

the comand $date = fgetcsv($f, 1000, "|");

gets the array('??','??','????','?','','').
instead of
array('???','???','????','??','?','??').

Is installed, that Example works correctly with:
1.FreeBSD 4.1, PHP Version 4.1.2, Apache/1.3.19
2.Windows 98 4.10, PHP Version 4.1.1, Apache/1.3.6

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-16 12:19 UTC] moriyoshi@php.net
Thank you for taking the time to report a problem with PHP.
Unfortunately you are not using a current version of PHP -- 
the problem might already be fixed. Please download a new
PHP version from http://www.php.net/downloads.php

If you are able to reproduce the bug with one of the latest
versions of PHP, please change the PHP version on this bug report
to the version you tested and change the status back to "Open".
Again, thank you for your continued support of PHP.


 [2003-01-21 04:04 UTC] alpes at softhome dot net
Has refreshed soft:
PHP Version 4.3.0
Apache/1.3.27
But the error in operation of the function has remained
 [2003-01-21 04:14 UTC] sniper@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php4-STABLE-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php4-win32-STABLE-latest.zip


Your example works just fine here (linux), using 4.3.1-dev.


 [2003-02-04 16:49 UTC] sniper@php.net
No feedback was provided. The bug is being suspended because
we assume that you are no longer experiencing the problem.
If this is not the case and you are able to provide the
information that was requested earlier, please do so and
change the status of the bug back to "Open". Thank you.


 [2003-02-18 09:24 UTC] moriyoshi@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 [2003-02-28 07:29 UTC] moriyoshi@php.net
Dupe of bug #12127

This problem never occurs on the systems that use GNU libc and can also be reproduced with Sun's libc or Microsoft's libc AFAIK.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 19:00:01 2026 UTC