Fixed bug #21689 (fgetcsv suppresses some characters before a separator) The fix is suggested by Masahiro Nakayama <masa@sfc.wide.ad.jp>

# is* functions expect their argument to be an integer in range of 0-255


git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@116926 c90b9560-bf6c-de11-be94-00142212c4b1